1.6.21.1/_sources/Reference/NodeReference/GafferScene/InteractiveRender.md.txt
InteractiveRender
=================

Performs interactive renders, updating the render on the fly
whenever the input scene changes.

user
----

Container for user-defined plugs. Nodes
should never make their own plugs here,
so users are free to do as they wish.

in
--

The scene to be rendered.

renderer
--------

The renderer to use. Default mode uses the `render:defaultRenderer` option from
the input scene globals to choose the renderer. This can be authored using
the StandardOptions node.

> Note : Changing renderer currently requires that the current render is
> manually stopped and restarted.

state
-----

Turns the rendering on and off, or pauses it.

out
---

A direct pass-through of the input scene.

resolvedRenderer
----------------

The renderer that will be used, accounting for the value of the
`render:defaultRenderer` option if `renderer` is set to "Default".

messages
--------

Messages from the render process.